src/components/description/styles.scss
@import "../../../variables.scss";

.main {
  width: calc(100% - 100px);
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-top: 20px;

  .description-container {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: row;

    .title {
      font-size: 36px;
      font-weight: 500;
      font-family: $primary-font;
      color: $primary-color;
      margin: 10px 0;
    }

    .location {
      font-size: 18px;
      font-weight: 500;
      font-family: $primary-font;
      color: $secondary-color;
      margin: 0;
    }

    .tags-container {
      display: flex;
      justify-content: flex-start;
      align-items: center;
      margin: 20px 0;

      .tags-list {
        display: flex;
        flex-direction: row;
        list-style: none;
        text-decoration: none;
        font-size: 14px;
        font-weight: 700;
        font-family: $primary-font;
        margin: 0;
        padding: 0;

        .tag {
          max-width: 100%;
          height: 28px;
          display: flex;
          justify-content: center;
          align-items: center;

          color: $tertiary-color;
          background-color: $primary-color;
          border-radius: 10px;
          box-sizing: border-box;
          margin-right: 10px;
          padding: 10px 10px;
        }
      }
    }

    .host-container {
      display: flex;
      justify-content: flex-end;
      align-items: flex-end;
      flex-direction: column;

      .host {
        width: 167px;
        height: 64px;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: row;
        margin: 0;
        padding: 0;

        .host-name {
          font-size: 18px;
          font-family: $primary-font;
          color: $primary-color;
          margin: 0;
          padding: 0;
          text-align: right;
        }

        .host-picture {
          width: 64px;
          height: 64px;
          border-radius: 50%;
          margin-left: 10px;
          object-fit: contain;
          box-sizing: border-box;
        }
      }

      .rating {
        display: flex;
        margin: 15px 0;

        .icon-full{
          color: #ff6060;
        }
        .icon-empty {
          color:#e3e3e3;
        }
        .fa-solid {
          padding: 10px;
        }

        .fa-solid .fa-star .active {
          color: $primary-color;
        }

        .fa-solid .fa-star .inactive {
          color: $inactive-star-color;
        }
      }
    }
  }

  .drop-container {
    width: calc(100% + 40px);
    display: flex;
    justify-content: center;
    flex-direction: row;
    box-sizing: border-box;
    margin-bottom: 50px;
  }
}

@media (max-width: 768px) {
  .main {
    width: 90%;
    .description-container {
      flex-direction: column;
      justify-content: flex-start;
      align-items: flex-start;
      .title {
        width: 90%;
        font-size: 18px;
        margin: 0 0 10px;
        word-wrap: break-word;
      }

      .location {
        font-size: 14px;
      }
      .tags-container {
        display: flex;
        justify-content: flex-start;
        align-items: center;
        margin: 10px 0;

        .tags-list {
          font-size: 14px;
          font-weight: 600;

          .tag {
            max-width: 100%;
            height: 18px;
            border-radius: 7px;
            box-sizing: border-box;
            padding: 10px 10px;
            font-size: 10px;
          }
        }
      }

      .host-container {
        width: 100%;
        height: 35px;
        display: flex;
        justify-content: space-between;
        align-items: flex-end;
        flex-direction: row-reverse;
        box-sizing: border-box;
        margin-bottom: 10px;

        .host {
          height: 35px;
          justify-content: flex-end;
          align-items: center;
          flex-direction: row;

          .host-name {
            max-width: 80px;
            font-size: 13px;
            font-weight: 500;
            margin: 0;
            padding: 0;
            text-align: right;
            word-wrap: break-word;
          }

          .host-picture {
            width: 32px;
            height: 32px;
          }
        }

        .rating {
          display: flex;
          margin: 5px 0;

          .fa-solid {
            font-size: 13px;
            padding: 3px;
          }
        }
      }
    }
    .drop-container {
      width: 110%;
      justify-content: center;
      flex-direction: column;
      align-items: center;
      margin-bottom: 10px;
      box-sizing: border-box;
    }
  }
}

